Updated schedule and styling

--- a/lesson-1.html
+++ b/lesson-1.html
@@ -71,6 +71,7 @@ h6 {
 }
 </style>
 
+<link rel="stylesheet" href="style.css" type="text/css" />
 
 
 
@@ -406,6 +407,9 @@ div.tocify {
       <a href="assignment-1.html">Assignment 1</a>
     </li>
   </ul>
+</li>
+<li>
+  <a href="resources.html">Resources</a>
 </li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
