--- a/README.html
+++ b/README.html
@@ -68,6 +68,7 @@ h6 {
 }
 </style>
 
+<link rel="stylesheet" href="style.css" type="text/css" />
 
 
 
@@ -310,6 +311,9 @@ $(document).ready(function () {
     </li>
   </ul>
 </li>
+<li>
+  <a href="resources.html">Resources</a>
+</li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
         
@@ -326,8 +330,8 @@ $(document).ready(function () {
 </div>
 
 
-<p>Repo for the EMSE 6574 Fall 2019 course website</p>
-<p><a href="https://app.netlify.com/sites/modest-wescoff-2a5eef/deploys"><img src="https://api.netlify.com/api/v1/badges/9d6fe76c-e462-4ed2-91f8-3820b431d9bf/deploy-status" alt="Netlify Status" /></a></p>
+<p>Course website for the Fall 2019 Section of EMSE 6574: Programming for Analytics</p>
+<p><a href="https://app.netlify.com/sites/emse6574/deploys"><img src="https://api.netlify.com/api/v1/badges/a89003f5-8be3-4ff8-a923-152fd995f3dd/deploy-status" alt="Netlify Status" /></a></p>
 <p><a href="https://emse6574.netlify.com/">Home Page</a></p>
 
 
