--- a/index.html
+++ b/index.html
@@ -432,70 +432,68 @@ div.tocify {
 <div id="course-information" class="section level1">
 <h1><span class="header-section-number">1</span> Course Information</h1>
 <table>
-<thead>
-<tr class="header">
-<th>Name:</th>
-<th>EMSE 6574: Programming for Analytics, Section 10</th>
-</tr>
-</thead>
 <tbody>
 <tr class="odd">
-<td>Semester:</td>
-<td>Fall 2019</td>
+<td>Name: </td>
+<td>EMSE 6574: Programming for Analytics, Section 10</td>
 </tr>
 <tr class="even">
-<td>Meeting Time:</td>
-<td>TBD</td>
+<td>Semester: </td>
+<td>Fall 2019</td>
 </tr>
 <tr class="odd">
-<td>Location:</td>
+<td>Meeting Time: </td>
+<td>TBD</td>
+</tr>
+<tr class="even">
+<td>Location: </td>
 <td>TBD</td>
 </tr>
 </tbody>
 </table>
+<p><vspace:10pt></p>
 </div>
 <div id="instructor-information" class="section level1">
 <h1><span class="header-section-number">2</span> Instructor Information</h1>
 <table>
-<thead>
-<tr class="header">
-<th>Name:</th>
-<th>John Paul Helveston</th>
-</tr>
-</thead>
 <tbody>
 <tr class="odd">
-<td>Campus Address:</td>
+<td>Name: </td>
+<td>John Paul Helveston</td>
+</tr>
+<tr class="even">
+<td>Campus Address: </td>
 <td>Science &amp; Engineering Hall, Office 2830</td>
 </tr>
-<tr class="even">
-<td>Campus Phone:</td>
+<tr class="odd">
+<td>Campus Phone: </td>
 <td>+1 (202) 994-7173</td>
 </tr>
-<tr class="odd">
-<td>Email:</td>
+<tr class="even">
+<td>Email: </td>
 <td><a href="mailto:jph@gwu.edu">jph@gwu.edu</a></td>
 </tr>
-<tr class="even">
-<td>Office Hours:</td>
+<tr class="odd">
+<td>Office Hours: </td>
 <td>TBD</td>
 </tr>
 </tbody>
 </table>
+<p><vspace:10pt></p>
 </div>
 <div id="course-description" class="section level1">
 <h1><span class="header-section-number">3</span> Course Description</h1>
 <div id="gw-bulletin-description" class="section level2">
 <h2><span class="header-section-number">3.1</span> GW Bulletin Description</h2>
-<p>Introduction to programming for data analytics using the <a href="https://www.r-project.org/">R computing language</a>; topics include R, RMarkdown, functions, conditionals, loops, debugging, testing, strings, file input/output, algorithmic thinking, coding style, efficiency, information visualization, Monte Carlo methods, webscraping data, packages, .</p>
+<p>Introduction to programming for data analytics using the <a href="https://www.r-project.org/">R computing language</a>; topics include R, RMarkdown, functions, conditionals, loops, strings, file input/output, data visualization, coding style, efficiency, Monte Carlo methods, webscraping data, and package development.</p>
 </div>
 <div id="detailed-description" class="section level2">
 <h2><span class="header-section-number">3.2</span> Detailed Description</h2>
-<p>Introduction to programming for data analytics using the <a href="https://www.r-project.org/">R programming language</a>. Topics covered include introduction to the R programming language, structured program design in R, data structures for analytics in R, information visualization, file input/output, basic data analytics methods, data acquisition from real world sources. This course will prepare students for higher level courses in data analytics.</p>
-<p>This course provides undergraduate students with a foundation in exploring data in the R programming language. Students will learn how to work with a wide variety of data types and structures as well as fundamental concepts in information visualization. The course will be managed on Github, and students will learn the basics of using git and Github to manage version controlling. All analyses will be conducted to support reproducibility from raw data to results using RMarkdown. There are no prerequisites, and no prior programming experience is necessary to succeed in this class.</p>
+<p>This course provides students with a foundation in programming for data analytics using the <a href="https://www.r-project.org/">R computing language</a>. Emphasis will be on learning how to read, write, and debug code to produce analyses that are easy to understand and fully reproducible. Throughout the course, students will primarily work on individual programming assignments to help practice coding skills. Students will be assessed through quizzes, exams, and a final project. Teaching will involve interactive lectures and recitations with lots of live coding. At the end of the semester, students will demonstrate mastery of the course’s topics by working on a 3-week term project. This course will prepare students for higher level courses in data analytics.</p>
 </div>
 <div id="prerequisites" class="section level2">
 <h2><span class="header-section-number">3.3</span> Prerequisites</h2>
+<p>There are no prerequisites, and no prior programming experience is necessary to succeed in this class.</p>
 </div>
 </div>
 <div id="learning-objectives" class="section level1">
@@ -533,7 +531,7 @@ div.tocify {
 </div>
 <div id="schedule" class="section level1">
 <h1><span class="header-section-number">6</span> Schedule</h1>
-<table class="table table-striped table-hover table-condensed table-responsive" style="margin-left: auto; margin-right: auto;">
+<table class="table table-striped table-hover" style="width: auto !important; margin-left: auto; margin-right: auto;">
 <thead>
 <tr>
 <th style="text-align:right;">
