--- a/assignment-1.html
+++ b/assignment-1.html
@@ -338,6 +338,8 @@ div.tocify {
 
 .tocify-subheader .tocify-item {
   font-size: 0.90em;
+  padding-left: 25px;
+  text-indent: 0;
 }
 
 .tocify .list-group-item {
@@ -382,7 +384,13 @@ div.tocify {
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
         <li>
-  <a href="index.html">Syllabus</a>
+  <a href="index.html">Home</a>
+</li>
+<li>
+  <a href="syllabus.html">Syllabus</a>
+</li>
+<li>
+  <a href="resources.html">Resources</a>
 </li>
 <li class="dropdown">
   <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">
@@ -391,6 +399,9 @@ div.tocify {
     <span class="caret"></span>
   </a>
   <ul class="dropdown-menu" role="menu">
+    <li>
+      <a href="getting-started.html">Getting Started</a>
+    </li>
     <li>
       <a href="lesson-1.html">Lesson 1</a>
     </li>
@@ -407,9 +418,6 @@ div.tocify {
       <a href="assignment-1.html">Assignment 1</a>
     </li>
   </ul>
-</li>
-<li>
-  <a href="resources.html">Resources</a>
 </li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
