--- a/README.html
+++ b/README.html
@@ -285,7 +285,13 @@ $(document).ready(function () {
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
         <li>
-  <a href="index.html">Syllabus</a>
+  <a href="index.html">Home</a>
+</li>
+<li>
+  <a href="syllabus.html">Syllabus</a>
+</li>
+<li>
+  <a href="resources.html">Resources</a>
 </li>
 <li class="dropdown">
   <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">
@@ -294,6 +300,9 @@ $(document).ready(function () {
     <span class="caret"></span>
   </a>
   <ul class="dropdown-menu" role="menu">
+    <li>
+      <a href="getting-started.html">Getting Started</a>
+    </li>
     <li>
       <a href="lesson-1.html">Lesson 1</a>
     </li>
@@ -310,9 +319,6 @@ $(document).ready(function () {
       <a href="assignment-1.html">Assignment 1</a>
     </li>
   </ul>
-</li>
-<li>
-  <a href="resources.html">Resources</a>
 </li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
