--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 
 
-<title>Course Syllabus</title>
+<title>EMSE 6574: Programming for Analytics</title>
 
 <script src="site_libs/jquery-1.11.3/jquery.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -19,13 +19,9 @@
 <script src="site_libs/bootstrap-3.3.5/js/bootstrap.min.js"></script>
 <script src="site_libs/bootstrap-3.3.5/shim/html5shiv.min.js"></script>
 <script src="site_libs/bootstrap-3.3.5/shim/respond.min.js"></script>
-<script src="site_libs/jqueryui-1.11.4/jquery-ui.min.js"></script>
-<link href="site_libs/tocify-1.9.1/jquery.tocify.css" rel="stylesheet" />
-<script src="site_libs/tocify-1.9.1/jquery.tocify.js"></script>
 <script src="site_libs/navigation-1.1/tabsets.js"></script>
 <link href="site_libs/highlightjs-9.12.0/default.css" rel="stylesheet" />
 <script src="site_libs/highlightjs-9.12.0/highlight.js"></script>
-<script src="site_libs/kePrint-0.0.1/kePrint.js"></script>
 
 <style type="text/css">code{white-space: pre;}</style>
 <style type="text/css">
@@ -265,90 +261,6 @@ $(document).ready(function () {
 
 
 
-<script>
-$(document).ready(function ()  {
-
-    // move toc-ignore selectors from section div to header
-    $('div.section.toc-ignore')
-        .removeClass('toc-ignore')
-        .children('h1,h2,h3,h4,h5').addClass('toc-ignore');
-
-    // establish options
-    var options = {
-      selectors: "h1,h2,h3",
-      theme: "bootstrap3",
-      context: '.toc-content',
-      hashGenerator: function (text) {
-        return text.replace(/[.\\/?&!#<>]/g, '').replace(/\s/g, '_').toLowerCase();
-      },
-      ignoreSelector: ".toc-ignore",
-      scrollTo: 0
-    };
-    options.showAndHide = true;
-    options.smoothScroll = true;
-
-    // tocify
-    var toc = $("#TOC").tocify(options).data("toc-tocify");
-});
-</script>
-
-<style type="text/css">
-
-#TOC {
-  margin: 25px 0px 20px 0px;
-}
-@media (max-width: 768px) {
-#TOC {
-  position: relative;
-  width: 100%;
-}
-}
-
-
-.toc-content {
-  padding-left: 30px;
-  padding-right: 40px;
-}
-
-div.main-container {
-  max-width: 1200px;
-}
-
-div.tocify {
-  width: 20%;
-  max-width: 260px;
-  max-height: 85%;
-}
-
-@media (min-width: 768px) and (max-width: 991px) {
-  div.tocify {
-    width: 25%;
-  }
-}
-
-@media (max-width: 767px) {
-  div.tocify {
-    width: 100%;
-    max-width: none;
-  }
-}
-
-.tocify ul, .tocify li {
-  line-height: 20px;
-}
-
-.tocify-subheader .tocify-item {
-  font-size: 0.90em;
-}
-
-.tocify .list-group-item {
-  border-radius: 0px;
-}
-
-
-</style>
-
-
 
 </head>
 
@@ -356,16 +268,6 @@ div.tocify {
 
 
 <div class="container-fluid main-container">
-
-
-<!-- setup 3col/9col grid for toc_float and main content  -->
-<div class="row-fluid">
-<div class="col-xs-12 col-sm-4 col-md-3">
-<div id="TOC" class="tocify">
-</div>
-</div>
-
-<div class="toc-content col-xs-12 col-sm-8 col-md-9">
 
 
 
@@ -383,7 +285,13 @@ div.tocify {
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
         <li>
-  <a href="index.html">Syllabus</a>
+  <a href="index.html">Home</a>
+</li>
+<li>
+  <a href="syllabus.html">Syllabus</a>
+</li>
+<li>
+  <a href="resources.html">Resources</a>
 </li>
 <li class="dropdown">
   <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">
@@ -392,6 +300,9 @@ div.tocify {
     <span class="caret"></span>
   </a>
   <ul class="dropdown-menu" role="menu">
+    <li>
+      <a href="getting-started.html">Getting Started</a>
+    </li>
     <li>
       <a href="lesson-1.html">Lesson 1</a>
     </li>
@@ -409,9 +320,6 @@ div.tocify {
     </li>
   </ul>
 </li>
-<li>
-  <a href="resources.html">Resources</a>
-</li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
         
@@ -424,650 +332,19 @@ div.tocify {
 
 
 
-<h1 class="title toc-ignore">Course Syllabus</h1>
+<h1 class="title toc-ignore">EMSE 6574: Programming for Analytics</h1>
 
 </div>
 
 
-<div id="course-information" class="section level1">
-<h1><span class="header-section-number">1</span> Course Information</h1>
-<table>
-<tbody>
-<tr class="odd">
-<td>Name: </td>
-<td>EMSE 6574: Programming for Analytics, Section 10</td>
-</tr>
-<tr class="even">
-<td>Semester: </td>
-<td>Fall 2019</td>
-</tr>
-<tr class="odd">
-<td>Meeting Time: </td>
-<td>TBD</td>
-</tr>
-<tr class="even">
-<td>Location: </td>
-<td>TBD</td>
-</tr>
-</tbody>
-</table>
-<p><vspace:10pt></p>
-</div>
-<div id="instructor-information" class="section level1">
-<h1><span class="header-section-number">2</span> Instructor Information</h1>
-<table>
-<tbody>
-<tr class="odd">
-<td>Name: </td>
-<td>John Paul Helveston</td>
-</tr>
-<tr class="even">
-<td>Campus Address: </td>
-<td>Science &amp; Engineering Hall, Office 2830</td>
-</tr>
-<tr class="odd">
-<td>Campus Phone: </td>
-<td>+1 (202) 994-7173</td>
-</tr>
-<tr class="even">
-<td>Email: </td>
-<td><a href="mailto:jph@gwu.edu">jph@gwu.edu</a></td>
-</tr>
-<tr class="odd">
-<td>Office Hours: </td>
-<td>TBD</td>
-</tr>
-</tbody>
-</table>
-<p><vspace:10pt></p>
-</div>
-<div id="course-description" class="section level1">
-<h1><span class="header-section-number">3</span> Course Description</h1>
-<div id="gw-bulletin-description" class="section level2">
-<h2><span class="header-section-number">3.1</span> GW Bulletin Description</h2>
-<p>Introduction to programming for data analytics using the <a href="https://www.r-project.org/">R computing language</a>; topics include R, RMarkdown, functions, conditionals, loops, strings, file input/output, data visualization, coding style, efficiency, Monte Carlo methods, webscraping data, and package development.</p>
-</div>
-<div id="detailed-description" class="section level2">
-<h2><span class="header-section-number">3.2</span> Detailed Description</h2>
-<p>This course provides students with a foundation in programming for data analytics using the <a href="https://www.r-project.org/">R computing language</a>. Emphasis will be on learning how to read, write, and debug code to produce analyses that are easy to understand and fully reproducible. Throughout the course, students will primarily work on individual programming assignments to help practice coding skills. Students will be assessed through quizzes, exams, and a final project. Teaching will involve interactive lectures and recitations with lots of live coding. At the end of the semester, students will demonstrate mastery of the course’s topics by working on a 3-week term project. This course will prepare students for higher level courses in data analytics.</p>
-</div>
-<div id="prerequisites" class="section level2">
-<h2><span class="header-section-number">3.3</span> Prerequisites</h2>
-<p>There are no prerequisites, and no prior programming experience is necessary to succeed in this class.</p>
-</div>
-</div>
-<div id="learning-objectives" class="section level1">
-<h1><span class="header-section-number">4</span> Learning objectives</h1>
-<p>Having successfully completed this course, students will be able to:</p>
-<ul>
-<li>Conduct a systematic exploratory data analysis (EDA) of different types of data.</li>
-<li>Understand fundamental principles of visualizing information for exploratory analysis and communication.</li>
-<li>Organize projects and manage version controlling with Git and GitHub</li>
-<li><a href="https://r4ds.had.co.nz/wrangle-intro.html">Wrangle data</a> from its original format into a fit-for-purpose format.</li>
-<li>Get data off the web and expose data, code, results on the web.</li>
-<li>Generate fully reproducible reports that contain contain code, equations, visualizations, and narrative text.</li>
-</ul>
-</div>
-<div id="texts-references" class="section level1">
-<h1><span class="header-section-number">5</span> Texts / References</h1>
-<p>All textbooks and references are available for free on the web, though physical copies can be purchased if desired:</p>
-<ul>
-<li>Data Wrangling in R:
-<ul>
-<li>Wickham, Hadley. “R for Data Science” [<a href="https://r4ds.had.co.nz/">free online</a>], [<a href="https://www.amazon.com/Data-Science-Transform-Visualize-Model/dp/1491910399">buy on amazon</a>]</li>
-</ul></li>
-<li>Data Visualization:
-<ul>
-<li>Healy, Kieran. “Data Visualization: A practical introduction” [<a href="http://socviz.co/">free online</a>], [<a href="https://www.amazon.com/Data-Visualization-Introduction-Kieran-Healy/dp/0691181624">buy on amazon</a>]</li>
-<li>Wilke, Claus O. “Fundamentals of Data Visualization” [<a href="https://serialmentor.com/dataviz/">free online</a>], [<a href="https://www.amazon.com/Fundamentals-Data-Visualization-Informative-Compelling/dp/1492031089">buy on amazon</a>]</li>
-</ul></li>
-<li>Handy R <a href="https://www.rstudio.com/resources/cheatsheets/">cheatsheets</a>:
-<ul>
-<li><a href="https://github.com/rstudio/cheatsheets/raw/master/rmarkdown-2.0.pdf">RMarkdown</a></li>
-<li><a href="https://github.com/rstudio/cheatsheets/raw/master/data-transformation.pdf">Data wrangling with the <code>dplyr</code> library</a></li>
-<li><a href="https://github.com/rstudio/cheatsheets/raw/master/data-visualization-2.1.pdf">Data visualization with the <code>ggplot2</code> library</a></li>
-</ul></li>
-</ul>
-</div>
-<div id="schedule" class="section level1">
-<h1><span class="header-section-number">6</span> Schedule</h1>
-<table class="table table-striped table-hover" style="width: auto !important; margin-left: auto; margin-right: auto;">
-<thead>
-<tr>
-<th style="text-align:right;">
-Week
-</th>
-<th style="text-align:left;">
-Meeting
-</th>
-<th style="text-align:left;">
-Date
-</th>
-<th style="text-align:left;">
-Topics
-</th>
-<th style="text-align:left;">
-Due
-</th>
-</tr>
-</thead>
-<tbody>
-<tr>
-<td style="text-align:right;">
-1
-</td>
-<td style="text-align:left;">
-1
-</td>
-<td style="text-align:left;">
-8/27
-</td>
-<td style="text-align:left;">
-Intro to course and software
-</td>
-<td style="text-align:left;">
-</td>
-</tr>
-<tr>
-<td style="text-align:right;">
-1
-</td>
-<td style="text-align:left;">
-2
-</td>
-<td style="text-align:left;">
-8/29
-</td>
-<td style="text-align:left;">
-RMarkdown &amp; Github
-</td>
-<td style="text-align:left;">
-</td>
-</tr>
-<tr>
-<td style="text-align:right;">
-2
-</td>
-<td style="text-align:left;">
-3
-</td>
-<td style="text-align:left;">
-9/3
-</td>
-<td style="text-align:left;">
-Getting familiar with R
-</td>
-<td style="text-align:left;">
-Data Camp 1
-</td>
-</tr>
-<tr>
-<td style="text-align:right;">
-2
-</td>
-<td style="text-align:left;">
-4
-</td>
-<td style="text-align:left;">
-9/5
-</td>
-<td style="text-align:left;">
-Getting familiar with RMarkdown
-</td>
-<td style="text-align:left;">
-</td>
-</tr>
-<tr>
-<td style="text-align:right;">
-3
-</td>
-<td style="text-align:left;">
-5
-</td>
-<td style="text-align:left;">
-9/10
-</td>
-<td style="text-align:left;">
-Getting familiar with data frames
-</td>
-<td style="text-align:left;">
-Data Camp 2
-</td>
-</tr>
-<tr>
-<td style="text-align:right;">
-3
-</td>
-<td style="text-align:left;">
-6
-</td>
-<td style="text-align:left;">
-9/12
-</td>
-<td style="text-align:left;">
-Data Wrangling I: The ‘verbs’ of the <code>dplyr</code> library
-</td>
-<td style="text-align:left;">
-</td>
-</tr>
-<tr>
-<td style="text-align:right;">
-4
-</td>
-<td style="text-align:left;">
-7
-</td>
-<td style="text-align:left;">
-9/17
-</td>
-<td style="text-align:left;">
-Data Wrangling II: Grouping, summarizing, &amp; pipes (<code>%&amp;gt;%</code>)
-</td>
-<td style="text-align:left;">
-Data Camp 3
-</td>
-</tr>
-<tr>
-<td style="text-align:right;">
-4
-</td>
-<td style="text-align:left;">
-8
-</td>
-<td style="text-align:left;">
-9/19
-</td>
-<td style="text-align:left;">
-Data Wrangling III: Joins, reshaping for tidy data
-</td>
-<td style="text-align:left;">
-</td>
-</tr>
-<tr>
-<td style="text-align:right;">
-5
-</td>
-<td style="text-align:left;">
-9
-</td>
-<td style="text-align:left;">
-9/24
-</td>
-<td style="text-align:left;">
-Fundamentals of Information Visualization
-</td>
-<td style="text-align:left;">
-Project Proposals
-</td>
-</tr>
-<tr>
-<td style="text-align:right;">
-5
-</td>
-<td style="text-align:left;">
-10
-</td>
-<td style="text-align:left;">
-9/26
-</td>
-<td style="text-align:left;">
-Visualizations I: The grammar of graphics, the <code>ggplot2</code> library, plotting points
-</td>
-<td style="text-align:left;">
-Data Camp 4
-</td>
-</tr>
-<tr>
-<td style="text-align:right;">
-6
-</td>
-<td style="text-align:left;">
-11
-</td>
-<td style="text-align:left;">
-10/1
-</td>
-<td style="text-align:left;">
-Visualizations II: Bars, histograms, &amp; boxplots
-</td>
-<td style="text-align:left;">
-Data Camp 5
-</td>
-</tr>
-<tr>
-<td style="text-align:right;">
-6
-</td>
-<td style="text-align:left;">
-12
-</td>
-<td style="text-align:left;">
-10/3
-</td>
-<td style="text-align:left;">
-Visualizations III: Facets, labeling &amp; themes
-</td>
-<td style="text-align:left;">
-</td>
-</tr>
-<tr>
-<td style="text-align:right;">
-7
-</td>
-<td style="text-align:left;">
-13
-</td>
-<td style="text-align:left;">
-10/8
-</td>
-<td style="text-align:left;">
-Data input / output &amp; the <code>here</code> library
-</td>
-<td style="text-align:left;">
-</td>
-</tr>
-<tr>
-<td style="text-align:right;">
-7
-</td>
-<td style="text-align:left;">
-14
-</td>
-<td style="text-align:left;">
-10/10
-</td>
-<td style="text-align:left;">
-In-class workshop: Getting data from the wild
-</td>
-<td style="text-align:left;">
-</td>
-</tr>
-<tr>
-<td style="text-align:right;">
-8
-</td>
-<td style="text-align:left;">
-15
-</td>
-<td style="text-align:left;">
-10/15
-</td>
-<td style="text-align:left;">
-Dealing with strings: the <code>stringr</code> library
-</td>
-<td style="text-align:left;">
-</td>
-</tr>
-<tr>
-<td style="text-align:right;">
-8
-</td>
-<td style="text-align:left;">
-16
-</td>
-<td style="text-align:left;">
-10/17
-</td>
-<td style="text-align:left;">
-Dealing with factors: the <code>forcats</code> library
-</td>
-<td style="text-align:left;">
-</td>
-</tr>
-<tr>
-<td style="text-align:right;">
-9
-</td>
-<td style="text-align:left;">
-17
-</td>
-<td style="text-align:left;">
-10/22
-</td>
-<td style="text-align:left;">
-R as a programming language: writing your own functions
-</td>
-<td style="text-align:left;">
-</td>
-</tr>
-<tr>
-<td style="text-align:right;">
-9
-</td>
-<td style="text-align:left;">
-18
-</td>
-<td style="text-align:left;">
-10/24
-</td>
-<td style="text-align:left;">
-R as a programming language: iteration with loops
-</td>
-<td style="text-align:left;">
-</td>
-</tr>
-<tr>
-<td style="text-align:right;">
-10
-</td>
-<td style="text-align:left;">
-19
-</td>
-<td style="text-align:left;">
-10/29
-</td>
-<td style="text-align:left;">
-Spring Break: No Class
-</td>
-<td style="text-align:left;">
-</td>
-</tr>
-<tr>
-<td style="text-align:right;">
-10
-</td>
-<td style="text-align:left;">
-20
-</td>
-<td style="text-align:left;">
-10/31
-</td>
-<td style="text-align:left;">
-Spring Break: No Class
-</td>
-<td style="text-align:left;">
-</td>
-</tr>
-<tr>
-<td style="text-align:right;">
-11
-</td>
-<td style="text-align:left;">
-21
-</td>
-<td style="text-align:left;">
-11/5
-</td>
-<td style="text-align:left;">
-</td>
-<td style="text-align:left;">
-</td>
-</tr>
-<tr>
-<td style="text-align:right;">
-11
-</td>
-<td style="text-align:left;">
-22
-</td>
-<td style="text-align:left;">
-11/7
-</td>
-<td style="text-align:left;">
-</td>
-<td style="text-align:left;">
-</td>
-</tr>
-<tr>
-<td style="text-align:right;">
-12
-</td>
-<td style="text-align:left;">
-23
-</td>
-<td style="text-align:left;">
-11/12
-</td>
-<td style="text-align:left;">
-</td>
-<td style="text-align:left;">
-</td>
-</tr>
-<tr>
-<td style="text-align:right;">
-12
-</td>
-<td style="text-align:left;">
-24
-</td>
-<td style="text-align:left;">
-11/14
-</td>
-<td style="text-align:left;">
-</td>
-<td style="text-align:left;">
-</td>
-</tr>
-<tr>
-<td style="text-align:right;">
-13
-</td>
-<td style="text-align:left;">
-25
-</td>
-<td style="text-align:left;">
-11/19
-</td>
-<td style="text-align:left;">
-</td>
-<td style="text-align:left;">
-</td>
-</tr>
-<tr>
-<td style="text-align:right;">
-13
-</td>
-<td style="text-align:left;">
-26
-</td>
-<td style="text-align:left;">
-11/21
-</td>
-<td style="text-align:left;">
-</td>
-<td style="text-align:left;">
-</td>
-</tr>
-<tr>
-<td style="text-align:right;">
-14
-</td>
-<td style="text-align:left;">
-27
-</td>
-<td style="text-align:left;">
-11/26
-</td>
-<td style="text-align:left;">
-</td>
-<td style="text-align:left;">
-</td>
-</tr>
-<tr>
-<td style="text-align:right;">
-14
-</td>
-<td style="text-align:left;">
-28
-</td>
-<td style="text-align:left;">
-11/28
-</td>
-<td style="text-align:left;">
-</td>
-<td style="text-align:left;">
-</td>
-</tr>
-<tr>
-<td style="text-align:right;">
-15
-</td>
-<td style="text-align:left;">
-29
-</td>
-<td style="text-align:left;">
-12/3
-</td>
-<td style="text-align:left;">
-</td>
-<td style="text-align:left;">
-</td>
-</tr>
-<tr>
-<td style="text-align:right;">
-15
-</td>
-<td style="text-align:left;">
-30
-</td>
-<td style="text-align:left;">
-12/5
-</td>
-<td style="text-align:left;">
-</td>
-<td style="text-align:left;">
-</td>
-</tr>
-<tr>
-<td style="text-align:right;">
-16
-</td>
-<td style="text-align:left;">
-–
-</td>
-<td style="text-align:left;">
-12/10
-</td>
-<td style="text-align:left;">
-Reading Week Begins
-</td>
-<td style="text-align:left;">
-</td>
-</tr>
-<tr>
-<td style="text-align:right;">
-17
-</td>
-<td style="text-align:left;">
-–
-</td>
-<td style="text-align:left;">
-12/12
-</td>
-<td style="text-align:left;">
-Final Exams Begin
-</td>
-<td style="text-align:left;">
-</td>
-</tr>
-</tbody>
-</table>
+<div id="fall-2019" class="section level1">
+<h1>Fall 2019</h1>
+<p>Welcome to EMSE 6574: Programming for Analytics. This is a separate section from the graduate-level section. In this section, we will be using the <a href="https://www.r-project.org/">R computing language</a> to learn how to read, write, and debug code and produce comprehendable and reproducible analyses.</p>
+<p>Click on the <a href="syllabus.html">Syllabus</a> page for details about the class requirements, learning objectives, and schedule.</p>
 </div>
 
 
 
-</div>
-</div>
 
 </div>
 
