Fixed table row stripes in schedule

--- a/syllabus.html
+++ b/syllabus.html
@@ -539,7 +539,7 @@ div.tocify {
 </div>
 <div id="schedule" class="section level1">
 <h1><span class="header-section-number">6</span> Schedule</h1>
-<table class="table table-striped table-hover" style="width: auto !important; ">
+<table class="table" style="width: auto !important; ">
 <thead>
 <tr>
 <th style="text-align:right;">
