Overhaul of schedule

--- a/README.html
+++ b/README.html
@@ -291,6 +291,9 @@ $(document).ready(function () {
   <a href="syllabus.html">Syllabus</a>
 </li>
 <li>
+  <a href="schedule.html">Schedule</a>
+</li>
+<li>
   <a href="resources.html">Resources</a>
 </li>
 <li class="dropdown">
@@ -337,8 +340,7 @@ $(document).ready(function () {
 
 
 <p>Course website for the Fall 2019 Section of EMSE 6574: Programming for Analytics</p>
-<p><a href="https://app.netlify.com/sites/emse6574/deploys"><img src="https://api.netlify.com/api/v1/badges/a89003f5-8be3-4ff8-a923-152fd995f3dd/deploy-status" alt="Netlify Status" /></a></p>
-<p><a href="https://emse6574.netlify.com/">Home Page</a></p>
+<p><a href="https://emse6574-gwu.github.io/2019-Fall">Home Page</a></p>
 
 
 
