--- a/index.html
+++ b/index.html
@@ -291,6 +291,9 @@ $(document).ready(function () {
   <a href="syllabus.html">Syllabus</a>
 </li>
 <li>
+  <a href="schedule.html">Schedule</a>
+</li>
+<li>
   <a href="resources.html">Resources</a>
 </li>
 <li class="dropdown">
