--- a/getting-started.html
+++ b/getting-started.html
@@ -390,6 +390,9 @@ div.tocify {
   <a href="syllabus.html">Syllabus</a>
 </li>
 <li>
+  <a href="schedule.html">Schedule</a>
+</li>
+<li>
   <a href="resources.html">Resources</a>
 </li>
 <li class="dropdown">
