Updating class notes 3

--- a/classNotes/3-functions/3-functions.html
+++ b/classNotes/3-functions/3-functions.html
@@ -19,12 +19,15 @@ class: center, middle, inverse, title-slide
 ---
 
 
-# Updates
+# Announcements
 
 ### 1. Download slack app 
 
 --
-### 2. Thanks for the animals Kaitlin, Jenny, Gabriel, and Emily!
+### 2. HW1 solutions will be posted Tues. @ 8:01pm.
+
+--
+### 3. Thanks for the animals Kaitlin, Jenny, Gabriel, William, and Emily!
 
 | | |
 |-|-|
@@ -46,8 +49,6 @@ class: center, middle, inverse, title-slide
 ---
 # Basic function syntax
 
-&lt;br&gt;
-
 
 ```r
 FNAME &lt;- function(ARG1, ARG2, ETC) {
@@ -58,20 +59,21 @@ FNAME &lt;- function(ARG1, ARG2, ETC) {
 ```
 
 --
-### Example:
+How I remember this:
 
-Write a function that returns the square root of `x`.
-
---
+&lt;img src="images/function_sytax_memory.png" width="700"&gt;
 &lt;br&gt;
 
+--
+**Example**: Write a function that returns the square root of `x`. Don't just call `sqrt()`.
+&lt;br&gt;
+--
 
 ```r
 mySqrt &lt;- function(x) {
     return(x^0.5)
 }
 ```
-
 --
 
 ```r
@@ -87,7 +89,6 @@ mySqrt(64)
 
 --
 .pull-left[
-Write a function that _returns_ `TRUE` if a number, `n`, is positive and `FALSE` otherwise.
 &lt;br&gt;
 
 
@@ -108,7 +109,6 @@ x
 ]
 --
 .pull-right[
-Write a function that _prints_ `TRUE` if a number, `n`, is positive and `FALSE` otherwise.
 &lt;br&gt;
 
 
