--- a/classNotes/4-conditionals-testing/4-conditionals-testing.html
+++ b/classNotes/4-conditionals-testing/4-conditionals-testing.html
@@ -500,18 +500,18 @@ For each of the following functions, start by writing a test function, e.g. `tes
 ---
 # Group Practice 
 
-### [20 minutes](https://www.youtube.com/watch?v=kxGWsHYITAw) - In groups of 4, write the following functions:
+### [20 minutes](https://www.youtube.com/watch?v=kxGWsHYITAw) - In groups of 4
 &lt;br&gt;
 
-1. Write the test function `testGetInRange()` that tests the function `getInRange(x, bound1, bound2)` for a variety of values of `x`, `bound1`, `bound2`. 
-&lt;br&gt;
-
-2. Write the function `getInRange(x, bound1, bound2)` which takes 3 numeric values: `x`, `bound1`, and `bound2`, where `bound1` is not necessarily less than `bound2`. If `x` is between the two bounds, just return it unmodified. Otherwise, if `x` is less than the lower bound, return the lower bound, or if `x` is greater than the upper bound, return the upper bound. For example:
+Write the function `getInRange(x, bound1, bound2)` which takes 3 numeric values: `x`, `bound1`, and `bound2`, where `bound1` is not necessarily less than `bound2`. If `x` is between the two bounds, just return it unmodified. Otherwise, if `x` is less than the lower bound, return the lower bound, or if `x` is greater than the upper bound, return the upper bound. For example:
 
 - `getInRange(1, 3, 5)` returns `3` (the lower bound, since 1 is below the range [3,5])
 - `getInRange(4, 3, 5)` returns `4` (the original value, since 4 is below the range [3,5])
 - `getInRange(6, 3, 5)` returns `5` (the upper bound, since 6 is above the range [3,5])
 - `getInRange(6, 5, 3)` returns `5` (the upper bound, since 6 is above the range [3,5])
+
+**Start** by writing the test function `testGetInRange()` that tests for a variety of values of `x`, `bound1`, `bound2`.  
+&lt;br&gt;
 
 **Bonus**: Re-write `getInRange(x, bound1, bound2)` without using conditionals
     </textarea>
