Fixed Pythagorean theorem on hw2

--- a/classNotes/5-loops/5-loops.html
+++ b/classNotes/5-loops/5-loops.html
@@ -241,12 +241,11 @@ for (i in seq(n)) {
 
 &gt; A friend calls her programmer roommate and says, "while you're out, buy some milk"...her roommate never returned home.
 &gt;
-&gt; ![](images/laugh_emoji.png){ width=100 }
+&lt;img src="images/laugh_emoji.png" width="100"&gt;
 
 ---
 # The `while` loop
 
---
 &lt;br&gt;
 .pull-left[
 ### Basic format:
@@ -269,8 +268,12 @@ Here's the general idea:
 ---
 # `for` vs. `while`
 
-- ### Use `for` loops when there is a _known_ number of iterations. 
-- ### Use `while` loops when there is an _unknown_ number of iterations.
+.pull-left[
+### Use `for` loops when there is a _known_ number of iterations. 
+]
+.pull-right[
+### Use `while` loops when there is an _unknown_ number of iterations.
+]
 
 ---
 # Practice: What will this return?
