Added announcements for L5

--- a/classNotes/5-loops/5-loops.html
+++ b/classNotes/5-loops/5-loops.html
@@ -22,7 +22,14 @@ class: center, middle, inverse, title-slide
 # Announcements
 
 --
-###What's with this `+` sign in the console?
+### 1) What's with this `+` sign in the console?
+
+--
+### 2) Do you like to draw? Leave your mark on EMSE 6574 by helping design a hex sticker!
+
+&lt;img src="images/hexlogos.png" width="300"&gt;
+
+### See http://hexb.in/ for dimensions, etc. 
 
 ---
 # "Flow Control"
